--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+
 /node_modules
 node_modules/
 /.pnp
@@ -13,6 +14,7 @@ node_modules/
 /build
 
 # misc
+.env/
 config.env
 .DS_Store
 .env.local
