--- a/backend/package.json
+++ b/backend/package.json
@@ -11,5 +11,10 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.1",
     "react-redux": "^8.0.5"
+  },
+
+  "scripts": {
+    "start": "node server.js"
   }
 }
+
