--- a/backend/package.json
+++ b/backend/package.json
@@ -10,11 +10,10 @@
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.1",
+    "nodemailer": "^6.9.2",
     "react-redux": "^8.0.5"
   },
-
   "scripts": {
     "start": "node server.js"
   }
 }
-
